src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__movie_details_ui__movie_details_ui_tests__tests__movie_details_ui_renders_movie_history_tab.snap
---
source: src/ui/radarr_ui/library/movie_details_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
              ╭  Movie Info  ──────────────────────────────────────────────────────────────────────────╮                
              │ Details │ History │ File │ Cast │ Crew │ Manual Search                                 │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              ╰────────────────────────────────────────────────────────────────────────────────────────╯
